--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ sass:
 # permalink and highlighter
 permalink   : /:year/:title/
 markdown    : kramdown
-highlighter : pygments
+highlighter : rouge
 
 # SEO settings
 title: Harkirat Singh
